--- a/src/main/resources/templates/cinemas/cinema_list.html
+++ b/src/main/resources/templates/cinemas/cinema_list.html
@@ -51,6 +51,9 @@
                     <td>[[${cinema.movieName}]]</td>
                     <td>[[${cinema.seats}]]</td>
                     <td>[[${cinema.date}]]</td>
+                    <td>
+                        <button class="btn btn-danger" type="button" id="removeCinema" th:value="${cinema.id}">제거</button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -70,7 +73,25 @@
         </div>
 
         <script inline="javascript">
+            $("#removeCinema").on("click", function() {
 
+                var theaterId = [[${theater.id}]];
+                var cinemaId = $(this).attr("value");
+
+                var form = document.createElement("form");
+                form.setAttribute("charset", "UTF-8");
+                form.setAttribute("method", "Post");
+                form.setAttribute("action", "/cinemas/"+cinemaId+"/remove");
+                
+                var input = document.createElement("input");
+                input.setAttribute("type", "hidden");
+                input.setAttribute("name", "theaterId");
+                input.setAttribute("value", theaterId);
+                form.appendChild(input);
+                
+                document.body.appendChild(form);
+                form.submit();
+            });
         </script>
     </th:block>
 </th:block>
