--- a/src/main/resources/templates/times/time_list.html
+++ b/src/main/resources/templates/times/time_list.html
@@ -37,6 +37,10 @@
                 <tr th:each="time : ${result}">
                     <td class="time" th:attr="data-id=${time.id}">[[${time.time}]]</td>
                     <td>[[${time.seatNum}]]</td>
+                    <td>미구현</td>
+                    <td>
+                        <button class="btn btn-danger" type="button" id="timeRemove" th:value="${time.id}">제거</button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -140,6 +144,29 @@
                     $('#seat-table > tbody').empty();
                     modal.modal('hide');
 
+                });
+
+                $("#timeRemove").on("click", function(){
+                    var cinemaId = [[${cinemaDTO.id}]];
+                    var timeId = $(this).attr("value");
+
+                    console.log(cinemaId);
+                    console.log(timeId);
+
+                    var form = document.createElement("form");
+                    form.setAttribute("charset", "UTF-8");
+                    form.setAttribute("method", "Post");
+                    form.setAttribute("action", "/times/"+timeId+"/remove");
+
+                    var input = document.createElement("input");
+                    input.setAttribute("type", "hidden");
+                    input.setAttribute("name", "cinemaId");
+                    input.setAttribute("value", cinemaId);
+                    
+                    form.appendChild(input);
+                    document.body.appendChild(form);
+
+                    form.submit();
                 });
             });
 
