--- a/src/main/resources/templates/reservations/reservation_form.html
+++ b/src/main/resources/templates/reservations/reservation_form.html
@@ -381,6 +381,12 @@
 
                 });
 
+                $(".reserveDate").on("click", ".movie-date", function(){
+
+                    
+
+                });
+
 
                 // function dayClickEvent(button) {
                 //     button.addEventListener("click", function() {
