Seat select + person num

--- a/src/main/resources/templates/reservations/reservation_form.html
+++ b/src/main/resources/templates/reservations/reservation_form.html
@@ -168,6 +168,7 @@
                                     str += "<h4>"+time.time+"</h4>";
                                     str += "<h5>총 좌석 :"+time.seatNum+"</h5>";
                                     str += "<h4>잔여 좌석 :"+time.availableNum+"</h4>";
+                                    str += "<a class='btn btn-primary' href='/reservations/seats/"+time.id+"'>예약하러가기</a>"
                                     str += "</div>";
                                 });
 
