Security Member Not Complete

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 
     <div class="jumbotron"> <h1>은아와 찬의의 찌부찌부 영화관 :)</h1>
         <p class="lead">회원 기능</p> <p>
-            <a class="btn btn-lg btn-secondary" href="/members/create">회원 가입</a>
+            <a class="btn btn-lg btn-secondary" href="/login">로그인</a>
             <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a> </p>
         <p class="lead">관리자 기능</p> <p>
             <a class="btn btn-lg btn-dark" href="/movies/create">영화 생성</a>
