--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,61 @@
 
 <div class="container">
 
-    <div class="jumbotron"> <h1>은아와 찬의의 찌부찌부 영화관 :)</h1>
-        <p class="lead">회원 기능</p> <p>
+    <style>
+        #myCarousel {
+            background-color: #FDFCF0;
+        }
+    </style>
+
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <!--      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>-->
+    <!--      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>-->
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+    
+            <div class="container">
+              <div class="carousel-caption text-start">
+                <img th:src="@{/img/main1.png}" width="880" height="400" alt="메인 소개 1">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+    
+            <div class="container">
+              <div class="carousel-caption">
+                <img th:src="@{/img/main2.png}" width="850" height="400" alt="메인 소개 2">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+    
+            <div class="container">
+              <div class="carousel-caption text-end">
+                <img th:src="@{/img/main3.png}" width="850" height="400" alt="메인 소개 3">
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    <div class="jumbotron"> <h1>HCY 영화관</h1>
+        <!-- <p class="lead">회원 기능</p> <p>
             <a class="btn btn-lg btn-secondary" href="/login">로그인</a>
             <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a> </p>
         <p class="lead">관리자 기능</p> <p>
@@ -15,7 +68,7 @@
             <a class="btn btn-lg btn-dark" href="/movies/list">영화 목록</a> </p>
         <p class="lead">예약 기능</p> <p>
             <a class="btn btn-lg btn-info" href="/reservations/create">영화 예약</a>
-            <a class="btn btn-lg btn-info" href="/reservations">예약 내역</a> </p>
+            <a class="btn btn-lg btn-info" href="/reservations">예약 내역</a> </p> -->
     </div>
 
 </div> <!-- /container -->
