--- a/src/main/resources/templates/movies/movie_create.html
+++ b/src/main/resources/templates/movies/movie_create.html
@@ -10,6 +10,9 @@
             <label >영화 제목 : </label>
             <input type="text" class="form-control" name="name" size="50" placeholder="제목 입력란" /><br/>
         </div>
+        <div class="form-group">
+            <label ></label>
+        </div>
         <button type="submit">저장</button>
     </form>
 
