--- a/src/main/resources/templates/movies/movie_read.html
+++ b/src/main/resources/templates/movies/movie_read.html
@@ -151,6 +151,8 @@
                     }
                     str += "</ul>";
 
+                    console.log(str);
+
                     reviewList.html(str);
                 }
 
