--- a/src/main/resources/templates/reservations/reservation_seat.html
+++ b/src/main/resources/templates/reservations/reservation_seat.html
@@ -58,6 +58,8 @@
                 <input class='personNum' type='text' value="1" />
                 <span class='plus'>+</span>
             </div>
+
+            <button>예약</button>
         </div>
 
         <script inline="javascript">
