--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <th:block th:fragment="setContent(content)">
 
 <head>
@@ -12,14 +12,33 @@
   <title>HCY Movie Theater</title>
 
   <!-- Bootstrap core CSS -->
-  <link href=/vendor/bootstrap/css/bootstrap.min.css rel="stylesheet">
+  <!-- <link href=/vendor/bootstrap/css/bootstrap.min.css rel="stylesheet"> -->
 
   <!-- Custom styles for this template -->
   <link href=/css/shop-homepage.css rel="stylesheet">
 
+  <link th:href="@{/css/carousel.css}" href="/css/carousel.css" rel="stylesheet">
+
   <!-- Bootstrap core JavaScript -->
-  <script src=/vendor/jquery/jquery.min.js></script>
-  <script src=/vendor/bootstrap/js/bootstrap.bundle.min.js></script>
+  <!-- <script src=/vendor/jquery/jquery.min.js></script>
+  <script src=/vendor/bootstrap/js/bootstrap.bundle.min.js></script> -->
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
+
+  <!-- Bootstrap core CSS -->
+  <!--    <link th:href="@{/css/bootstrap.min.css}" href="/css/bootstrap.min.css" rel="stylesheet">-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <!--    <script th:src="@{/js/bootstrap.bundle.min.js}" src="/js/bootstrap.bundle.min.js"></script>-->
+
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+
+  <style>
+    body {
+      background-color: #FDFCF0;
+  }
+  </style>
 
 
 </head>
@@ -36,18 +55,22 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="/movies/info">영화</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/reservations/create">예매</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="/theaters/all">극장</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <div sec:authorize="isAnonymous()">
+              <a class="nav-link" href="/login">로그인</a>
+              <a class="nav-link" href="/signup">회원가입</a>
+            </div>
+            <div sec:authorize="isAuthenticated()">
+              <a class="nav-link" href="/logout">로그아웃</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -59,7 +82,7 @@
 
     <div class="row">
 
-      <div class="col-lg-3">
+      <!-- <div class="col-lg-3">
 
         <h1 class="my-4">차니와 웅아의 찌부찌부 영화관!!!</h1>
         <div class="list-group">
@@ -68,7 +91,7 @@
           <a href="#" class="list-group-item">Category 3</a>
         </div>
 
-      </div>
+      </div> -->
 
       <div class="container-fluid">
         <th:block th:replace="${content}"></th:block>
