--- a/src/main/resources/templates/members/signup.html
+++ b/src/main/resources/templates/members/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Movie Reservation-Login</title>
   <link rel="stylesheet" href="css/index.css">
@@ -8,48 +8,29 @@
 </head>
 <body>
 
-    <!-- Header -->
-    <div class="header">
-      <!-- 서비스 메뉴 -->
-      <div class="header_menu">
-        <h1>T I C K E T</h1>
-
-      </div>
-      <!-- /서비스 메뉴 -->
-    </div>
-    <!-- /Header -->
-
-
     <!-- Body -->
     <div class="container">
       <button id="back_button" onclick="history.back();"> <i class="far fa-arrow-alt-circle-left"></i></button>
 
 
       <div class="signup">
-        <form method="POST" action = "/sign_up">
+        <form method="POST" th:action="@{/signup}" th:object="${memberSaveDTO}">
           <div>
-            <label for="signup_id" class="signup_label"> <span>ID</span> </label>
-            <input type="text" name="signup_id" id="signup_id" required />
+            <label for="signup_id" class="signup_label"> <span>Email</span> </label>
+            <input type="email" id="signup_id" th:field="*{email}" required />
           </div>
           <div>
             <label for="signup_pw" class="signup_label"> <span>Password</span> </label>
-            <input type="text" name="signup_pw" id="signup_pw" required />
+            <input type="text" id="signup_pw" th:field="*{password}" required />
           </div>
           <div>
-            <label for="signup_name" class="signup_label"> Name </label>
-            <input type="text" name="signup_name" id="signup_name" required />
+            <label for="signup_name" class="signup_label"> <span>Name</span> </label>
+            <input type="text" id="signup_name" th:field="*{name}" required />
           </div>
-          <div>
-            <label for="signup_city" class="signup_label"> City </label>
-            <input type="text" name="signup_city" id="signup_city" required />
-          </div>
-          <div>
-            <label for="signup_email" class="signup_label"> E-mail </label>
-            <input type="email" name="signup_email" id="signup_email" required />
-          </div>
+
           <div>
           <button type="submit">회원가입</button>
-        </div>
+          </div>
         </form>
       </div>   
       <!-- /Login --> 
